--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "web-worker-example",
+	"name": "Web Worker Example",
 	"version": "0.1.0",
 	"minAppVersion": "1.4.16",
 	"description": "",
