--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "web-worker-example",
 	"name": "Web Worker Example",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"minAppVersion": "1.4.16",
-	"description": "",
+	"description": "A minimal working example of building an Obsidian.md plugin using web workers",
 	"author": "Ryota Ushio",
 	"authorUrl": "https://github.com/RyotaUshio",
 	"fundingUrl": "https://www.buymeacoffee.com/ryotaushio",
